# EmbeddedSysProj

./: CMakeLists.txt  README.md  xbox_to_pico.py
include/: encoder.h  imu.h  motors.h  uart_comm.h  uart_comm1.h
robo_pico/: README.md  pico_sdk_import.cmake
robo_pico/include/: drift_correction.h  imu.h  uart_comm.h
robo_pico/src/: auto_turn_test.c  main.c  maker_pi_pico.c  robo_uart_test.c  uart_comm.c
sensor_pico/: CMakeLists.txt  README.md
sensor_pico/include/: lidar.h  lwipopts.h  mqtt.h  servo_mmwave_pan.h  uart_comm.h
sensor_pico/src/: lidar.c  mqtt.c  sensor_pico.c  servo_mmwave_pan.c  uart_comm.c
src/: drift_correction.c  encoder.c  imu.c  lidar_uart_test.c  main.c  mainRobot.c  motors.c  motortest.c  robo_pico.c  uart_comm.c  uart_comm1.c  wheelEncoder.c
